updated links of images

--- a/html5up-astral/index.html
+++ b/html5up-astral/index.html
@@ -49,13 +49,13 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small caption">
-											<a href="https://github.com/jonush/Sprint-Challenge--User-Interface" class="image fit"><img class="img1" src="images/sprint.png" alt="" style="height: 250px" target="_blank"></a>
+											<a href="https://github.com/jonush/Sprint-Challenge--User-Interface/tree/jonathan-hsu" class="image fit" target="_blank"><img class="img1" src="images/sprint.png" alt="" style="height: 250px"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/greatidea.png" alt="" class="img2" style="height: 250px" target="_blank"></a>
+											<a href="https://github.com/jonush/responsive-web-design-I/tree/jonathan-hsu" class="image fit" target="_blank"><img src="images/greatidea.png" alt="" class="img2" style="height: 250px"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/personal.png" alt="" class="img3" style="height: 250px" target="_blank"></a>
+											<a href="https://github.com/jonush/portfolio-website/tree/jonathan-hsu" class="image fit" target="_blank"><img src="images/personal.png" alt="" class="img3" style="height: 250px"></a>
 										</div>
 									</div>
 								</section>
