changed the images for the projects

--- a/html5up-astral/index.html
+++ b/html5up-astral/index.html
@@ -49,13 +49,21 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small caption">
-											<a href="https://github.com/jonush/Sprint-Challenge--User-Interface/tree/jonathan-hsu" class="image fit" target="_blank"><img class="img1" src="images/sprint.png" alt="" style="height: 250px"></a>
+											<a href="https://github.com/jonush/Sprint-Challenge--User-Interface/tree/jonathan-hsu" class="image fit" target="_blank">
+												<div class="img1">
+													<h3>Sprint Challenge</h3>
+												</div>
+											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/jonush/responsive-web-design-I/tree/jonathan-hsu" class="image fit" target="_blank"><img src="images/greatidea.png" alt="" class="img2" style="height: 250px"></a>
+											<a href="https://github.com/jonush/responsive-web-design-I/tree/jonathan-hsu" class="image fit" target="_blank"><div class="img2">
+												<h3>Great Idea Site</h3>
+											</div></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/jonush/portfolio-website/tree/jonathan-hsu" class="image fit" target="_blank"><img src="images/personal.png" alt="" class="img3" style="height: 250px"></a>
+											<a href="https://github.com/jonush/portfolio-website/tree/jonathan-hsu" class="image fit" target="_blank"><div class="img3">
+												<h3>Portfolio Site</h3>
+											</div></a>
 										</div>
 									</div>
 								</section>
